--- a/xaringan-lockton.css
+++ b/xaringan-lockton.css
@@ -45,7 +45,7 @@
   --text-color: #000000;
   --header-color: #000000;
   --background-color: #FFFFFF;
-  --link-color: #00AEEF;
+  --link-color: #EF5399;
   --text-bold-color: #00AEEF;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
